# Freela_Backend

./: .gitignore  README.md  db.sqlite3  pyproject.toml
config/: settings.py  urls.py  wsgi.py
core/ads/: admin.py  apps.py  models.py  serializer.py  urls.py  views.py
core/ads/migrations/: 0001_initial.py  0002_ads_perfil.py  0003_ads_ads_category_ads_target_audience.py  0004_potas.py  0005_delete_potas.py  0006_ads_is_paid.py  0007_remove_ads_image.py
core/ads/signals/: recommendation_signal.py  save_image.py
core/pay/: aiad.py  apps.py  models.py  serializer.py  urls.py  views.py
core/pay/migrations/: 0001_initial.py  0002_remove_address_zip_code_city_zip_code.py  0003_rename_complemement_address_complement.py  0004_remove_address_neighborhood_name_and_more.py  0005_remove_address_complement.py  0006_transaction.py  0007_transaction_amount.py  0008_transaction_is_paid.py  0009_alter_transaction_created_at.py  0010_address_cpf_transaction_accept_proposal_and_more.py  0011_transaction_method_transaction_number.py  0012_transaction_ads.py
core/pay/use_case/: pix.py  teste.py
core/perfil/: admin.py  apps.py  filters.py  models.py  serializer.py  urls.py  views.py
core/perfil/migrations/: 0001_initial.py  0002_alter_perfil_photo.py  0002_hability_myhability_myproject_perfil.py  0003_alter_perfil_about_me.py  0003_remove_myhability_user_myhability_perfil_and_more.py  0004_area_nacionality_rename_categoriafreelancer_subarea_and_more.py  0004_perfil_number_projects_in_execution.py  0005_perfil_is_pro.py  0005_subarea_area.py  0006_myprojects_project_alter_myprojects_perfil.py  0006_remove_perfil_photo.py  0007_perfil_access_token_mercado_pago_and_more.py  0007_pro_is_paid.py  0008_mycompetency_created_at.py  0008_perfilavaliation.py  0009_choiceproject.py  0009_perfil_avaliation.py  0010_perfil_every_avaliations.py  0011_perfil_image_perfil.py
core/perfil/signals/: avaliations.py  email_update.py
core/perfil/templates/: email_updated.html
core/project/: admin.py  apps.py  models.py  serializer.py  urls.py  views.py
core/project/migrations/: 0001_initial.py  0002_project_crontractor.py  0003_rename_crontractor_project_contractor.py  0004_integrationtype_remove_project_area_and_more.py  0005_project_contractor.py  0006_project_in_execution.py  0007_project_finished_project_pending_finishedproject.py  0008_remove_project_finished.py  0009_remove_project_pending_project_status.py  0010_delete_finishedproject.py  0011_alter_project_status.py  0012_project_created_at.py  0013_project_response_ai.py
core/project/signals/: recomend_ai.py
core/project/templates/: bot_template.html
core/proposal/: admin.py  apps.py  models.py  serializer.py  urls.py  views.py
core/report/: admin.py  apps.py  models.py  new.py  serializer.py  teste.py  urls.py  views.py
core/report/use_case/: report.py  (+2 more)
core/service/: admin.py  apps.py  models.py  serializer.py  urls.py  views.py
core/user/: apps.py  authentication.py  models.py  permissions.py  serializer.py  urls.py  views.py
image/: fefd615f-24c1-49fc-9f00-638a9cce0d85png
potas_recommend/: api_test.py  config.json  model.safetensors  test.py  train.py
uploader/: admin.py  apps.py  router.py  teste.py  views.py
uploader/helpers/: files.py  system.py
uploader/migrations/: 0001_initial.py  0002_alter_image_file_alter_image_public_id.py  0002_image_image_base64_alter_image_file.py
uploader/models/: image.py
uploader/signals/: updated_cloudinary.py
utils/mixins/: accept_mixin.py  create_ads.py  create_ai_mixin.py  create_contract_service.py  create_my_project_mixin.py  create_project.py  create_report.py  create_user.py  get_report.py  list_contract.py  potas_mixin.py  project_update.mixin.py  proposal_mixin.py  report_mixin.py  update_report.py
utils/populate/: perfil.py
utils/training_ai/: api_view.py  dataset_definition.py
utils/viewset/: accept_view.py  create_ai.py  create_ai_view.py  potas_view.py  project_view.py  proposal_view.py  report_view.py  service_view.py  teste.py
(+62 files in other folders)
