[project]
name = "Freela_Backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "kauabarros-24", email = "martinsbarroskaua@gmail.com"},
    {name = "", email = ""},
]
dependencies = [
    "django>=5.1.1",
    "djangorestframework>=3.15.2",
    "django-cors-headers>=4.4.0",
    "djangorestframework-simplejwt>=5.3.1",
    "simplejwt>=2.0.1",
    "python-magic>=0.4.27; sys_platform == \"linux\"",
    "Pillow>=10.4.0",
    "WeasyPrint>=62.3",
    "reportlab>=4.2.2",
    "cloudinary>=1.41.0",
    "requests>=2.32.3",
    "transformers>=4.45.1",
    "tensorflow>=2.17.0",
    "torch>=2.4.1",
    "torchvision>=0.19.1",
    "torchaudio>=2.4.1",
    "keras>=3.5.0",
    "tf-keras>=2.17.0",
    "langdetect>=1.0.9",
    "sentencepiece>=0.2.0",
    "huggingface-hub>=0.26.1",
    "huggingface>=0.0.1",
    "django-filter>=24.3",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.pdm.scripts]
r = "python3 manage.py runserver"
makemigrations = "python3 manage.py makemigrations"
migrate = "python3 manage.py migrate"
newMasterMan ="python3 manage.py createsuperuser"
newApp = "django-admin startapp"
newProject = "django-admin startproject"
shellp = "python3 manage.py shell"

