[project]
name = "Freela_Backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "kauabarros-24", email = "martinsbarroskaua@gmail.com"},
    {name = "", email = ""},
]
dependencies = [
    "django>=5.1.1",
    "djangorestframework>=3.15.2",
    "django-cors-headers>=4.6.0",
    "djangorestframework-simplejwt>=5.3.1",
    "simplejwt>=2.0.1",
    "python-magic>=0.4.27; sys_platform == \"linux\"",
    "Pillow>=10.4.0",
    "WeasyPrint>=62.3",
    "reportlab>=4.2.2",
    "cloudinary>=1.41.0",
    "requests>=2.32.3",
    "transformers>=4.46.2",
    "tensorflow>=2.18.0",
    "keras>=3.5.0",
    "tf-keras>=2.18.0",
    "langdetect>=1.0.9",
    "sentencepiece>=0.2.0",
    "huggingface-hub>=0.26.1",
    "huggingface>=0.0.1",
    "django-filter>=24.3",
    "torch>=2.5.1",
    "pdm>=2.20.1",
    "fastapi>=0.115.5",
    "pipeline>=0.1.0",
    "django-cloudinary-storage>=0.3.0",
    "whitenoise>=6.8.2",

]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.pdm.scripts]
r = "python3 manage.py runserver"
makemigrations = "python3 manage.py makemigrations"
migrate = "python3 manage.py migrate"
newMasterMan ="python3 manage.py createsuperuser"
newApp = "django-admin startapp"
newProject = "django-admin startproject"
shellp = "python3 manage.py shell"